# LinearSystem

./: .gitignore  CMakeLists.txt  LinearSystem.cpp  LinearSystem.hpp  README.md  run2compile.sh
include/: DesignMatrix.hpp  Feature.hpp  LinearSystem.hpp  PolyFeature.hpp  ProcessNoiseCov.hpp  RateFeature.hpp  StateTransitionMatrix.hpp
src/: DesignMatrix.cpp  LinearSystem.cpp  ProcessNoiseCov.cpp  StateTransitionMatrix.cpp
